regles_iptables.txt
# Generated by iptables-save v1.6.1 on Thu May 25 12:13:32 2023
*nat
:PREROUTING ACCEPT [412:93494]
:INPUT ACCEPT [412:93494]
:OUTPUT ACCEPT [3672:301270]
:POSTROUTING ACCEPT [2248:215830]
COMMIT
# Completed on Thu May 25 12:13:32 2023
# Generated by iptables-save v1.6.1 on Thu May 25 12:13:32 2023
*filter
:INPUT ACCEPT [332:59955]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [305:30627]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 172.27.111.20/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlan0 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -d 193.145.200.146/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 195.77.20.146/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 142.250.201.74/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 172.217.168.168/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 216.239.38.178/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 216.239.32.178/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 216.239.36.178/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 216.239.34.178/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 104.17.24.14/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 104.17.25.14/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 142.250.200.99/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 193.144.127.85/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 151.101.65.229/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 151.101.129.229/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 151.101.1.229/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 151.101.193.229/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m owner --uid-owner 1003 -j DROP
COMMIT
# Completed on Thu May 25 12:13:32 2023
